Prevent crash when updating Watched Nicks

Rather than trying to keep valid a cached copy of the end iterator,
just fetch a new one every time.

BUG: 497799